# ChefAgent

./: .gitignore  README.md  main.py  pyproject.toml  test_stream.py  test_stream_raw.py
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/services/: memory.py  minimax_client.py  oss_service.py  recipe_service.py
backend/resources/: personal_chief.db  personal_chief.db-shm  personal_chief.db-wal
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.vue  styles.css
frontend/src/api/: client.js
frontend/src/components/: AppLayout.vue  ChatArea.vue  ChatPanel.vue  RecipeCard.vue
