[project]
name = "chefagent-backend"
version = "0.1.0"
description = "AI 私厨后端服务（FastAPI + LangChain + Minimax）"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "pydantic-settings>=2.3.0",
    "langchain>=0.2.0",
    "oss2>=2.19.1",
]

[dependency-groups]
dev = [
    "ruff>=0.5.0",
]
