[project]
name = "chefagent-backend"
version = "0.1.0"
description = "ChefAgent 后端服务（FastAPI + LangChain）"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "pydantic-settings>=2.3.0",
    "langchain>=0.2.0",
    "oss2>=2.19.1",
    "tavily-python>=0.7.24",
    "langgraph>=1.1.10",
    "langgraph-checkpoint-sqlite>=3.0.3",
]

[dependency-groups]
dev = [
    "ruff>=0.5.0",
]
